-----2.8 -----
	* [macOS] added support for touchbar
	* Show the size of the members in the JSON file in the import file dialog
	* [worksheet] In the Export Worksheet Dialog allow to export to the clipboard
	* [worksheet] Allow to move plots, text labels and legend with arrow keys

-----2.7 (24.10.2019)-----
New features:
	* Allow to move objects (drag&drop) to different folders in the project explorer
	* [spreadsheet] allow to insert multiple rows and columns in one step
	* [spreadsheet] improved the handling of calculated columns (values calculated via a formula):
		* Allow to automatically update the calculated column on data changes in the variable columns
		* Invalidate the calculated column if one of the variable columns was deleted
		* In "Functions Values" dialog highlight the variable column combobox red if the variable column was deleted in the project
		* In "Functions Values" dialog don't allow to select columns to be calculated as variable columns (avoid circular dependencies)
		* In "Used in" context menu of a column show all other calculated columns where this column is used as a variable
	* [spreadsheet] when pasting data into empty columns, automatically convert their type to the type of the data to be pasted
	* BUG 406805 - support für directory structures in ROOT files
	* Automatically update curves if a data column deleted before was re-added again (during the import or manually)
	* When auto-scaling in the plot take also the error bars into account, if available
	* For live data sources allow to save the relative path to the data source

UX improvements:
	* in the "Import Data" dialog show the history of the recently imported files
	* Improved the selection of curves in the plot that are near to or behind each other
	* BUG 408529 - Allow to use DEL to delete cells in spreadsheet and matrix
	* BUG 408537 - Allow to insert multiple rows and columns in the spreadsheet in one step
	* Added translations to Windows and macOS packages