@@ -541,40 +541,3 @@ void ImageDock::load() {
 
 	m_initializing = false;
 }
-
-void ImageDock::loadConfigFromTemplate(KConfig& config) {
-
-}
-
-void ImageDock::loadConfig(KConfig& config) {
-	if (!m_image)
-		return;
-
-	m_initializing = true;
-
-	// Geometry
-// 	ui.cbPositionX->setCurrentIndex( group.readEntry("PositionX", (int) m_image->position().horizontalPosition ) );
-// 	ui.sbPositionX->setValue( Worksheet::convertFromSceneUnits(group.readEntry("PositionXValue", m_image->position().point.x()),Worksheet::Centimeter) );
-// 	ui.cbPositionY->setCurrentIndex( group.readEntry("PositionY", (int) m_image->position().verticalPosition ) );
-// 	ui.sbPositionY->setValue( Worksheet::convertFromSceneUnits(group.readEntry("PositionYValue", m_image->position().point.y()),Worksheet::Centimeter) );
-//
-// 	if (!m_axesList.isEmpty()) {
-// 		ui.sbOffsetX->setValue( Worksheet::convertFromSceneUnits(group.readEntry("OffsetX", m_axesList.first()->titleOffsetX()), Worksheet::Point) );
-// 		ui.sbOffsetY->setValue( Worksheet::convertFromSceneUnits(group.readEntry("OffsetY", m_axesList.first()->titleOffsetY()), Worksheet::Point) );
-// 	}
-// 	ui.cbHorizontalAlignment->setCurrentIndex( group.readEntry("HorizontalAlignment", (int) m_image->horizontalAlignment()) );
-// 	ui.cbVerticalAlignment->setCurrentIndex( group.readEntry("VerticalAlignment", (int) m_image->verticalAlignment()) );
-// 	ui.sbRotation->setValue( group.readEntry("Rotation", m_image->rotationAngle()) );
-//
-// 	//Border
-// 	ui.cbBorderShape->setCurrentIndex(group.readEntry("BorderShape").toInt());
-// 	ui.kcbBorderColor->setColor( group.readEntry("BorderColor", m_image->borderPen().color()) );
-// 	ui.cbBorderStyle->setCurrentIndex( group.readEntry("BorderStyle", (int)m_image->borderPen().style()) );
-// 	ui.sbBorderWidth->setValue( Worksheet::convertFromSceneUnits(group.readEntry("BorderWidth", m_image->borderPen().widthF()), Worksheet::Point) );
-// 	ui.sbBorderOpacity->setValue( group.readEntry("BorderOpacity", m_image->borderOpacity())*100 );
-	m_initializing = false;
-}
-
-void ImageDock::saveConfigAsTemplate(KConfig& config) {
-
-}
