@@ -148,16 +148,6 @@
      </property>
     </widget>
    </item>
-   <item row="19" column="5">
-    <widget class="QComboBox" name="cbBorderStyle">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-    </widget>
-   </item>
    <item row="10" column="0">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
@@ -173,6 +163,16 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="19" column="5">
+    <widget class="QComboBox" name="cbBorderStyle">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
    <item row="16" column="0" colspan="4">
     <widget class="QLabel" name="lRotation">
@@ -220,7 +220,7 @@
       </sizepolicy>
      </property>
      <property name="toolTip">
-      <string> Select the file to import</string>
+      <string> Select the image file</string>
      </property>
      <property name="text">
       <string/>
@@ -306,6 +306,19 @@
      </property>
     </spacer>
    </item>
+   <item row="11" column="0">
+    <widget class="QLabel" name="lPosition">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Position</string>
+     </property>
+    </widget>
+   </item>
    <item row="13" column="0">
     <widget class="QLabel" name="lPositionY">
      <property name="toolTip">
@@ -377,7 +390,7 @@
    <item row="3" column="5">
     <widget class="QLineEdit" name="leFileName">
      <property name="toolTip">
-      <string>Specify the name of the image file.</string>
+      <string>Specify the name of the image file</string>
      </property>
      <property name="clearButtonEnabled">
       <bool>true</bool>
@@ -521,19 +534,6 @@
       </size>
      </property>
     </spacer>
-   </item>
-   <item row="11" column="0">
-    <widget class="QLabel" name="lPosition">
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Position</string>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
