@@ -3,6 +3,7 @@
 	* Show the size of the members in the JSON file in the import file dialog
 	* [worksheet] In the Export Worksheet Dialog allow to export to the clipboard
 	* [worksheet] Allow to move plots, text labels and legend with arrow keys
+	* [worksheet] Image worksheet element
 
 -----2.7 (24.10.2019)-----
 New features:
